# lomiri-gallery-app

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING.CC-3.0-BY-SA  ChangeLog  NEWS  README.md  clickable.json  clickable.yaml
click/: CMakeLists.txt  gallery.apparmor  manifest.json.in
debian/: .gitlab-ci.yml  README  changelog  control  copyright  copyright.in  lomiri-gallery-app-autopilot.install  lomiri-gallery-app-common.lintian-overrides  lomiri-gallery-app-name-change.sh  lomiri-gallery-app.install  lomiri-gallery-app.lintian-overrides  lomiri-gallery-app.migrations  lomiri-gallery-app.user-session-migration  lomiri-gallery-app_01_update-content-hub.sh  rules  watch
debian/source/: include-binaries
debian/upstream/: metadata
desktop/: CMakeLists.txt  gallery-app.desktop.in.in  lomiri-gallery-app.desktop.in.in
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+115 more)
rc/: CMakeLists.txt
rc/js/: Gallery.js  GalleryUtility.js  GraphicsRoutines.js
rc/qml/: AlbumsOverview.qml  EventsOverview.qml  GalleryApplication.qml  LoadingScreen.qml  MainScreen.qml  PhotosOverview.qml  PickerScreen.qml
rc/qml/AlbumEditor/: AlbumCoverMenu.qml  AlbumEditMenu.qml  AlbumEditor.qml
rc/qml/AlbumViewer/: AlbumCover.qml  AlbumCoverList.qml  AlbumOpener.qml  AlbumPageComponent.qml  AlbumPageIndicator.qml  AlbumPreviewComponent.qml  AlbumSpreadViewer.qml  AlbumViewer.qml  AlbumViewerAnimated.qml
rc/qml/Components/: AspectArea.qml  Checkerboard.qml  CheckerboardDelegate.qml  DeleteDialog.qml  DeleteOrDeleteWithContentsDialog.qml  EventCard.qml  MediaGrid.qml  MediaSelector.qml  MouseAreaWithMultipoint.qml  PopupAlbumPicker.qml  SwipeArea.qml  TextEditOnClick.qml  UnableShareDialog.qml
rc/qml/Controller/: SettingsController.qml
rc/qml/MediaViewer/: GalleryPhotoComponent.qml  MediaListView.qml  MediaViewer.qml  PhotoEditorPage.qml  PhotoViewerTransition.qml  PopupPhotoViewer.qml  SingleMediaViewer.qml
rc/qml/OrganicView/: OrganicAlbumView.qml  OrganicItemInteraction.qml  OrganicMediaList.qml  OrganicView.qml
rc/qml/Utility/: DissolveAnimation.qml  EditingHUD.qml  ExpandAnimation.qml  FadeInAnimation.qml  FadeOutAnimation.qml  SelectionState.qml
setup/gui/: gallery-app.desktop
src/: CMakeLists.txt  config.h.in  gallery-application.cpp  gallery-application.h  gallery-manager.cpp  gallery-manager.h  lomiri-gallery-app-migrate.py  main.cpp  media-object-factory.cpp  media-object-factory.h
src/album/: CMakeLists.txt  album-collection.cpp  album-collection.h  album-default-template.cpp  album-default-template.h  album-page.cpp  album-page.h  album-template-page.cpp  album-template-page.h  album-template.cpp  album-template.h  album.cpp  album.h
src/core/: CMakeLists.txt  container-source-collection.cpp  container-source-collection.h  container-source.cpp  container-source.h  data-collection.cpp  data-collection.h  data-object.cpp  data-object.h  data-source.cpp  data-source.h  selectable-view-collection.cpp  selectable-view-collection.h  source-collection.cpp  source-collection.h  view-collection.cpp  view-collection.h
src/database/: CMakeLists.txt  album-table.cpp  album-table.h  database.cpp  database.h  media-table.cpp  media-table.h
src/event/: CMakeLists.txt  event-collection.cpp  event-collection.h  event.cpp  event.h
src/media/: CMakeLists.txt  media-collection.cpp  media-collection.h  media-monitor.cpp  media-monitor.h  media-source.cpp  media-source.h
src/medialoader/: CMakeLists.txt  video-metadata.cpp  video-metadata.h
src/photo/: CMakeLists.txt  photo-metadata.cpp  photo-metadata.h  photo.cpp  photo.h
src/qml/: CMakeLists.txt  qml-album-collection-model.cpp  qml-album-collection-model.h  qml-event-collection-model.cpp  qml-event-collection-model.h  qml-event-overview-model.cpp  qml-event-overview-model.h  qml-media-collection-model.cpp  qml-media-collection-model.h  qml-view-collection-model.cpp  qml-view-collection-model.h
src/util/: CMakeLists.txt  collections.h  command-line-parser.cpp  command-line-parser.h  imaging.cpp  imaging.h  orientation.cpp  orientation.h  resource.cpp  resource.h  urlhandler.cpp  urlhandler.h  variants.h
src/video/: CMakeLists.txt  video.cpp  video.h
tests/: CMakeLists.txt
tests/unittests/imaging/: CMakeLists.txt  tst_imaging.cpp
tests/unittests/stubs/: photo_stub.cpp  (+8 more)
(+50 files in other folders)
